<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Play_Response_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/friend_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cat"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/friend_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/txt_invite_respnse"
        android:layout_marginStart="10dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/friend_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/friend_img"
        app:layout_constraintBottom_toBottomOf="@id/friend_img"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_invite_respnse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_response"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_img"
        app:layout_constraintBottom_toTopOf="@id/btn_accept"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_invite_respnse"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txt_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_decline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

</android.support.constraint.ConstraintLayout>