<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cat"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/profile_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/profile_name"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toRightOf="@id/profile_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_img"
        app:layout_constraintBottom_toBottomOf="@id/profile_img"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/txt_bani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/profile_bani"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/rv_friend_list"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_bani_numar"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_bani_numar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/txt_raise"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/rv_friend_list"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/txt_bani"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/friends_list"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_list"
        android:layout_marginTop="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_bani"
        app:layout_constraintBottom_toTopOf="@id/rv_friend_list"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_friend_list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friends_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

</android.support.constraint.ConstraintLayout>