<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
    android:id="@+id/txt_settings"
        android:textSize="25dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fragment_settings"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/spinner_theme"
    app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinner_theme"
        app:layout_constraintTop_toTopOf="@id/spinner_theme"
        app:layout_constraintBottom_toBottomOf="@id/spinner_theme"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Spinner
        android:id="@+id/spinner_theme"
        style="@android:style/Widget.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/theme_arrays"
        android:prompt="@string/theme_prompt"
        app:layout_constraintLeft_toRightOf="@id/txt_theme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/txt_card_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_back_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinner_card_back"
        app:layout_constraintTop_toTopOf="@id/spinner_card_back"
        app:layout_constraintBottom_toBottomOf="@id/spinner_card_back"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Spinner
        android:id="@+id/spinner_card_back"
        style="@android:style/Widget.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/card_back_prompt"
        app:layout_constraintLeft_toRightOf="@id/txt_card_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

</android.support.constraint.ConstraintLayout>