<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/table">

    <Button
        app:backgroundTint="@android:color/holo_orange_light"
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_check"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_call"
        app:layout_constraintLeft_toRightOf="@id/btn_fold"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        app:backgroundTint="@android:color/holo_orange_light"
        android:id="@+id/btn_fold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fold"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        app:backgroundTint="@android:color/holo_orange_light"
        android:id="@+id/btn_raise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_raise"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_call"
        app:layout_constraintHorizontal_chainStyle="packed"
         />

    <Button
        app:backgroundTint="@android:color/holo_orange_light"
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_call"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_raise"
        app:layout_constraintLeft_toRightOf="@id/btn_check"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/player_card1"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/player_card2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/player_card2"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/player_card1"
        app:layout_constraintRight_toLeftOf="@id/btn_fold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
         />

    <ImageView
        android:id="@+id/opponent_card1"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/opponent_card2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/opponent_card2"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/opponent_card1"
        app:layout_constraintRight_toLeftOf="@id/btn_fold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/chips"
        android:background="@android:color/transparent"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/chips_original"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/btn_raise"
        app:layout_constraintRight_toRightOf="parent"
         />

    <ImageView
        android:id="@+id/chips_played"
        android:background="@android:color/transparent"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/chips_original"
        app:layout_constraintTop_toBottomOf="@id/dealer_card2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@id/dealer_card2"
        app:layout_constraintRight_toRightOf="@id/dealer_card2"
        />

    <ImageView
        android:id="@+id/opponent_chips_played"
        android:background="@android:color/transparent"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/chips_original"
        app:layout_constraintBottom_toTopOf="@id/dealer_card2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@id/dealer_card2"
        app:layout_constraintRight_toRightOf="@id/dealer_card2"
        />

    <TextView
        android:id="@+id/opponent_chips_played_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/txt_raise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/opponent_chips_played"
        app:layout_constraintTop_toTopOf="@id/opponent_chips_played"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/opponent_chips_played"
         />

    <TextView
        android:id="@+id/chips_played_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/txt_raise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/chips_played"
        app:layout_constraintTop_toTopOf="@id/chips_played"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/chips_played"
        />

    <TextView
        android:id="@+id/chips_total_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/txt_raise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/chips"
        app:layout_constraintRight_toRightOf="@id/chips"
        app:layout_constraintLeft_toLeftOf="@id/chips"
        />

    <TextView
        android:id="@+id/turn_action"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/text_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/player_card1"
        app:layout_constraintTop_toBottomOf="@id/opponent_card2"
        app:layout_constraintRight_toRightOf="@id/player_card2"
        app:layout_constraintLeft_toLeftOf="@id/player_card1"
        />

    <TextView
        android:id="@+id/turn_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/text_placeholder"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/player_card1"
        app:layout_constraintLeft_toLeftOf="@id/chips"
        app:layout_constraintRight_toRightOf="@id/chips"
        app:layout_constraintTop_toBottomOf="@id/opponent_card2" />

    <ImageView
        android:id="@+id/opponent_chips"
        android:background="@android:color/transparent"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/chips_original"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/btn_raise"
        app:layout_constraintRight_toRightOf="parent"
        />


    <ImageView
        android:id="@+id/dealer_card1"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dealer_card2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/dealer_card2"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toRightOf="@id/dealer_card1"
        app:layout_constraintRight_toLeftOf="@id/dealer_card3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/dealer_card3"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toRightOf="@id/dealer_card2"
        app:layout_constraintRight_toLeftOf="@id/dealer_card4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/dealer_card4"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/dealer_card3"
        app:layout_constraintRight_toLeftOf="@id/dealer_card5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/dealer_card5"
        android:layout_width="60dp"
        android:layout_height="84dp"
        android:src="@drawable/card_back1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@id/dealer_card4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/raise_decrement"
        app:backgroundTint="@android:color/holo_orange_light"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:textSize="12sp"
        android:text="@string/btn_minus"
        app:layout_constraintLeft_toLeftOf="@id/btn_raise"
        app:layout_constraintBottom_toTopOf="@id/btn_raise"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/raise_increment"
        app:backgroundTint="@android:color/holo_orange_light"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:padding="5dp"
        android:textSize="12sp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_plus"
        app:layout_constraintRight_toRightOf="@id/btn_raise"
        app:layout_constraintBottom_toTopOf="@id/btn_raise"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/raise_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_raise"
        android:layout_margin="1dp"
        app:layout_constraintRight_toLeftOf="@id/raise_increment"
        app:layout_constraintLeft_toRightOf="@id/raise_decrement"
        app:layout_constraintBottom_toBottomOf="@id/raise_decrement"
        app:layout_constraintTop_toTopOf="@id/raise_decrement"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

</android.support.constraint.ConstraintLayout>